--- a/_config.yml
+++ b/_config.yml
@@ -99,6 +99,4 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: git
-  repo: https://github.com/abrebion/hexo-demo
-  branch: master
+  type: ''
