--- a/themes/leastack/_config.yml
+++ b/themes/leastack/_config.yml
@@ -6,10 +6,10 @@ rss: /atom.xml
 
 # Content
 excerpt_link: Read More
-fancybox: true
+fancybox: false
 
 # Sidebar
-sidebar: right
+sidebar: bottom
 widgets:
 - category
 - tag
@@ -28,8 +28,6 @@ archive_type: 'monthly'
 show_count: false
 
 # Miscellaneous
-google_analytics:
-gauges_analytics:
 google_tag_manager: GTM-WSMX
 favicon: /favicon.png
 twitter:
